src/index.css
html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  background-color: #000;
  color: #ddd;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

.app {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
  background-color: #444;
  min-height: 100vh;
  box-sizing: border-box;
}

.app__header {
  min-height: 5em;
  display: flex;
  align-items: center;
  justify-content: center;
}

.app__main {
  flex: 1;
  background-color: #222;
  border-radius: 3px;
  padding: .5em;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.app__footer {
  text-align: center;
  padding: 1rem 0;
  background: linear-gradient(90deg, #8f94fb, #4e54c8);
  color: white;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.header__title {
  color: #6b8cd9;
  font-weight: bold;
  margin: 0;
  font-size: 2rem;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: 2rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
}

@media (max-width: 900px) {
  .cards {
    justify-content: center;
  }
}

